--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 	  FAQ
 	</div>
       </div>
-      <div class="footer">
+      <div class="row footer">
 	<div class="span12">
 	  Footer
 	</div>
