--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>GIT watch</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -110,7 +110,7 @@
 	    <span class="icon-bar"></span>
 	    <span class="icon-bar"></span>
 	  </button>
-	  <a class="brand" href="#">Bitstarter</a>
+	  <a class="brand" href="#">GIT watch</a>
 	  <div class="nav-collapse collapse">
 	    <ul class="nav">
 	      <li class"active"><a href="#">Home</a></li>
@@ -125,47 +125,44 @@
     <div class="container">
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>Product</h1>
+	  <h1>GIT watch</h1>
 	</div>	
       </div>
       <div class="row-fluid subheading">
 	<div class="span12">
-	  <p class="lead">One sentence description</p>
+	  <p class="lead">A simple cross-platform notifier</p>
 	</div>
       </div>
       <div class="row-fluid pitch">
-	<div class="span5 offset1 video">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
-	</div>
-	
-	<div class="span5 actions">
+	<div class="offset3 span5 actions">
 	  <div class="span8 offset2">
 	    <div class="statistics">
 	      <div class="span4">
 		<div class="linediv-l">
-		  <h3>1000</h3> <p>backers</p>
+		  <h3>0</h3> <p>watchers</p>
 		</div>
 	      </div>
 	      <div class="span4">
 		<div class="linediv-c">
-		  <h3>$6000</h3> <p>of $10,000</p>
+		  <h3>0</h3> <p>of 1,000</p>
 		</div>
 	      </div>
 	      <div class="span4">
 		<div class="linediv-r">
-		  <h3>10</h3> <p>days left</p>
+		  <h3>&infin;</h3> <p>days left</p>
 		</div>
 	      </div>
 	    </div>
 	  </div>
 	  <div class="span10 offset1">
 	    <div class="thermometer progress active">
-	      <div class="bar bar-success" style="width: 60%;"></div>
-	      <div class="bar bar-warning" style="width: 40%;"></div>
+	      <div class="bar bar-success" style="width: 1%;"></div>
+	      <div class="bar bar-warning" style="width: 99%;"></div>
 	    </div>
 	  </div>
 	  <div class="span6 offset3 order">
-	    <button class="btn btn-success btn-large">Preorder</button>
+	    <iframe src="http://ghbtns.com/github-btn.html?user=maxymshg&repo=git-watch&type=watch&count=true&size=large"
+		    allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
 	  </div>
 	  <div class="span8 offset2 social">
 	    <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
@@ -176,48 +173,21 @@
       
       <div class="row-fluid section1">
 	<div class="span5 offset1 asset">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <img class="img-polaroid" src="http://nvie.com/img/2009/12/Screen-shot-2009-12-24-at-11.32.03.png">
 	</div>
 	<div class="span5 copy">
 	  <p>
-	    Lorem
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+	    Good day everyone!<br>
+	    Git watch is a simple cross-platform desktop application, which 
+	    will monitor your repositories and notify you about commits.<br>
+	    We work in Teams and your branching model is in most case are 
+	    like on picture. But it very difficult to know what is going on 
+	    in your repo. What way you use to be in touch? 
+	    Hooks, git web, or some custom scripts? I want fix it with my software.<br>
+	    If you like my idea watch me on GitHub.
 	  </p>
 	</div>
       </div>
-
-      <div class="row-fluid section2">
-	<div class="span5 offset1 copy copy-right">
-	  <p>
-	    Lorem
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
-	  </p>
-	</div>
-	<div class="span5 asset">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
-	</div>
-      </div>
-      
 
       <div class="row-fluid faq">
           <div class="span10 offset1">
